tests/syntax/bad/testfile-unclosed_string-1.scala
class A {
    var s = "
    }

object Main { def main(args: Array[String]) { } }
